This file lists bigger/noteworthy changes, only...

Version 1.0 (upcoming)
dyncall:
  o better C++ compiler support (for pointer conversions)
  o fix for PPC64 single-precision floating point args (thanks Masanori!)
dyncallback:
doc:
  o working html doc generation from TEX sources

Version 0.9 (2015/12/31)
dyncall:
  o ARM64 support (AAPCS64 on Linux & Apple's derived version on iOS)
  o armhf calling convention support for ARM32
  o PPC64 support, including syscalls (thanks Masanori!)
  o introduced dcArgF and dcVArgF for flexible/convenient argument binding (works like dcCallF/dcVCallF but without the function call)
  o using -fPIC by default for FreeBSD
  o PPC32 linux syscall support
  o fixed return value errors for arm32 on some platforms (e.g. freebsd/arm32, nintendo ds); arm & thumb mode
dyncallback:
  o ARM64 support (AAPCS64 on Linux, Apple's derived version on iOS)
  o armhf calling convention support for ARM32
  o PPC64 support (thanks Masanori!)
  o PPC32 System V support (Linux)
  o fix for PPC32 Darwin/OS X
  o more intuitive specification of callback return type
doc:
  o added ARM64 support info and calling convention documentation
  o added ARM32 armhf section
  o added PPC64 support info
  o cleanup, brought all up to date, etc.
tests:
  o callf test covers new argf interface
  o several fixes to some test suites
buildsys:
  o more flexible testsuite build and 'pack' target for convenience
  o fixes/additions for OS X universal builds
  o added iOS universal build support for armv7/arm64
  o helper script for generic .elf -> EBOOT.PBP creation for PSP
  o Sun make fixes for C++ code in test suite
bindings:
  o erldc: Erlang binding (thanks Erik!)
infrastructure:
  o moved to hg

Version 0.8 (2014/03/24)
buildsys:
  o big simplification make-based build system, no more distinct GNU and BSD makefiles anymore
  o new, much simpler ./configure for new make-based build-system